XMLtoCSV/objects/unpackaged/objects/PCYC_Call_Report_Detail__c.object
<CustomObject>
    <description>Contains all Call data needed for reports e.g, attachment details</description>
    <fields>
        <fullName>PCYC_Attachment_Details_calc__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; Id, &apos;link&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attachment Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Attachment_Links__c</fullName>
        <description>Contains list of attachment links - each link in separate line.</description>
        <label>Attachments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_ref__c</fullName>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Call Report Details</relationshipLabel>
        <relationshipName>PCYC_Call_Report_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCYC_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_Num_Attachments__c</fullName>
        <label># Attachments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Call Report Detail</label>
    <nameField>
        <displayFormat>PCR-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Report Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>